feat: carrito funcional agregar/quitar/cambiar cantidad

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h2>Carrito</h2>
     <div id="cartItems"></div> <!--render del carrito y total-->
     <p>Total: <span id="cartTotal">$0</span></p> <!--render del carrito y total-->
+    <button id="clearCart" class="btn">Vaciar carrito</button> <!--boton para vaciar carrito-->
+
   </aside>
 </main>
 
