feat: arreglo visual

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<header class="header">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FakeStore</title>
+  <link rel="stylesheet" href="styles/estilos.css">
+
+</head>
+<body>
+  <header class="header">
   <h1>FakeStore</h1>
 </header>
 
@@ -21,3 +31,5 @@
 </main>
 
 <script src="scripts/app.js"></script>
+</body>
+</html>
